--- a/app/templates/pages/home.html
+++ b/app/templates/pages/home.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Gerador - My FastAPI Project{% endblock %}
+{% block title %}FalaAi - {{ slogan }}{% endblock %}
 
 {% block content %}
 <main class="container">
