--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -47,6 +47,18 @@
             margin: 0 auto;
             text-align: center;
         }
+        .alert{
+            font-weight: bolder;
+            color: white;
+            border-radius: 5px;
+            padding: 10px 15px 10px 15px;
+        }
+        .success{
+            background-color: green;
+        }
+        .error{
+            background-color: red;
+        }
     </style>
     
     <!-- Adicione aqui mais metatags ou links de CSS conforme necessário -->
@@ -55,6 +67,9 @@
 </head>
 <body>
     <main>
+        <div id="alert" class="alert" style="display: none;">
+            <span id="alert-msg"></span>
+        </div>
         <div class="content">
             {% block content %}
             <!-- O conteúdo específico da página será inserido aqui -->
